created custom banner

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<div class="jumbotron center">
+  <h2>YelpDemo is the best way to find reviews on local restaurants</h2>
+    <h4>Explore the favorite diners, pastry shops, and eateries in your community.</h4>
+</div>
+
 <h1>Listing Restaurants</h1>
 
 <table>
