--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,24 +1,43 @@
-<%= image_tag @restaurant.image_url %>
+<div class="row">
+	<div class="col-md-3">
+		<%= image_tag @restaurant.image_url %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @restaurant.name %>
-</p>
+		<p>
+		  <strong>Name:</strong>
+		  <%= @restaurant.name %>
+		</p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @restaurant.address %>
-</p>
+		<p>
+		  <strong>Address:</strong>
+		  <%= @restaurant.address %>
+		</p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @restaurant.phone %>
-</p>
+		<p>
+		  <strong>Phone:</strong>
+		  <%= @restaurant.phone %>
+		</p>
 
-<p>
-  <strong>Website:</strong>
-  <%= @restaurant.website %>
-</p>
+		<p>
+		  <strong>Website:</strong>
+		  <%= link_to @restaurant.website, "http://#{@restaurant.website}" %>
+		</p>
+		<p>
+			<strong><%= link_to "Write a Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %></strong>
+		</p>
 
-<%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
-<%= link_to 'Back', restaurants_path %>
+
+		<%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
+		<%= link_to 'Back', restaurants_path %>
+	</div>
+	<div class="col-md-9">
+		<% if @reviews.blank? %>
+			<h3>No reviews yet. Be the first to write one.</h3>
+		<% else %>
+			<h2>Reviews</h2>
+			<% @reviews.each do |review| %>
+				<p><%= review.rating %></p>
+				<p><%= review.comment %></p>
+			<% end %>
+		<% end %>
+	</div>
+</div>
