--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', "#" %>
+<!-- we can use @restaurant here because it was defined earlier in the controller file -->
+<%= link_to 'Back', restaurant_path(@restaurant.id) %>
