--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -35,9 +35,19 @@
 		<% else %>
 			<h2>Reviews</h2>
 			<% @reviews.each do |review| %>
-				<p><%= review.rating %></p>
+				<div class="star-rating" data-score= <%= review.rating %> ></div>
 				<p><%= review.comment %></p>
 			<% end %>
 		<% end %>
 	</div>
 </div>
+
+<script>
+	$('.star-rating').raty({
+		path: 'https://s3.amazonaws.com/yelp-demo-2014/Stars',
+		readOnly: true,
+		score: function() {
+    return $(this).attr('data-score');
+  }
+	});
+</script>
