--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,6 +6,11 @@
 		  <strong>Name:</strong>
 		  <%= @restaurant.name %>
 		</p>
+		
+		<div class="star-rating" data-score= <%= @avg_rating %> ></div>
+		<p>
+			<%= "#{@reviews.length} reviews"%>
+		</p>
 
 		<p>
 		  <strong>Address:</strong>
@@ -29,15 +34,22 @@
 		<%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 		<%= link_to 'Back', restaurants_path %>
 	</div>
-	<div class="col-md-9">
+
+	<div class="col-md-9"> <!-- Restaurant Reviews -->
 		<% if @reviews.blank? %>
 			<h3>No reviews yet. Be the first to write one.</h3>
 		<% else %>
-			<h2>Reviews</h2>
-			<% @reviews.each do |review| %>
-				<div class="star-rating" data-score= <%= review.rating %> ></div>
-				<p><%= review.comment %></p>
-			<% end %>
+			<table class="table">
+				<tbody>
+					<% @reviews.each do |review| %>
+						<tr>
+							<td><div class="star-rating" data-score= <%= review.rating %> ></div>
+							<p><%= h(review.comment).gsub(/\n/, '<br>').html_safe %></p>
+							</td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
 		<% end %>
 	</div>
 </div>
