--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@restaurant, :html => { multipart: true }) do |f| %>
   <% if @restaurant.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
+    <div id="error_explanation" class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <h4><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h4>
 
       <ul>
       <% @restaurant.errors.full_messages.each do |message| %>
@@ -12,23 +13,23 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %><br>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control", placeholder: "Chipotle" %>
   </div>
   <div class="form-group">
-    <%= f.label :address %><br>
-    <%= f.text_field :address, class: "form-control" %>
+    <%= f.label :address %>
+    <%= f.text_field :address, class: "form-control", placeholder: "201 Brookline Avenue, Boston, MA 02215" %>
   </div>
   <div class="form-group">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone, class: "form-control" %>
+    <%= f.label :phone %>
+    <%= f.text_field :phone, class: "form-control", placeholder: "(617) 247-0174" %>
   </div>
   <div class="form-group">
-    <%= f.label :website %><br>
-    <%= f.text_field :website, class: "form-control" %>
+    <%= f.label :website %>
+    <%= f.text_field :website, class: "form-control", placeholder: "http://www.panerabread.com/" %>
   </div>
   <div class="form-group">
-    <%= f.label :image %><br>
+    <%= f.label :image %>
     <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="form-group">
